--- a/sample.html
+++ b/sample.html
@@ -1,9 +1,116 @@
+<html>
+<hmtl lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>RGU Homepage</title>
+    </head>
+    <body>
+    </body>
+    </hmtl>
+
+    </body>
+
+
 <div id="quicklinks">
-    <ul>
-        <li><a href ="#">Home</a></li>
-        <li><a href ="#">About</a></li>
-        <li><a href ="#">RGYou</a></li>
-        <li><a href ="#">Staff & Current Students</a></li>
-        <li><a href ="#">A to Z</a></li>
-    </ul>
 </div>
+
+<img id="rgu_logo" src="H:\Sam\CMM007-NEW\download.png" alt="Robert Gordon University"/>
+<div id="seachbox">
+    <form>
+        <p>Search</p>
+        <input type="text" name="searchfield">
+        <input type="submit" value="Go">
+    </form>
+</div>
+
+<header>
+    <div id="quicklinks">
+        <ul>
+            <li><a href ="https://www.rgu.ac.uk/">Home</a></li>
+            <li><a href ="https://www.rgu.ac.uk/about">About</a></li>
+            <li><a href ="https://liverguac.sharepoint.com/">RGYou</a></li>
+            <li><a href ="https://www.rgu.ac.uk/staff">Staff</a></li>
+            <li><a href ="& https://www.rgu.ac.uk/current-students">Current Students</a></li>
+            <li><a href ="https://www.rgu.ac.uk/study">A to Z</a></li>
+        </ul>
+    </div>
+
+    <img id="rgu_logo" src="H:\Sam\CMM007-NEW\download.png" alt="Robert Gordon University"/>
+    <div id="seachbox">
+
+
+<nav>
+    <ul>
+        <li><a href ="https://www.rgu.ac.uk/">Areas of Study</a></li>
+        <li><a href ="https://www.rgu.ac.uk/study/apply">Future Students</a></li>
+        <li><a href ="https://www.rgu.ac.uk/alumni-supporters">...</a></li>
+        <li><a href ="https://www.rgu.ac.uk/contact-us">Contact Us</a></li>
+    </ul>
+</nav>
+</header>
+
+<main>
+<!--Section 1-->
+    <h2>
+
+ <form>
+    <input type="text" name="keywordbox" value="Enter Keyword">
+    <select>
+        <option value="compsci">Computer Science</option>
+        <option value="digmed">Digital Media</option>
+        <option value="network">Computer Network Management and Design</option>
+        <option value="other">Other</option>
+        <option value="digmed">Sam studio</option>
+
+    </select>
+    <input type="submit" value="search">
+</form>
+
+<main>
+<!-- Section 2-->
+     <h3>
+
+
+<form>
+    <input type="text" name="keywordbox" value="Enter Keyword">
+    <select>
+    <option value="compsci">Computer Science</option>
+    <option value="digmed">Digital Media</option>
+    <option value="network">Computer Network Management and Design</option>
+    <option value="other">Other</option>
+</select>
+<input type="submit" value="search">
+</form>
+
+<main>
+<!--section 3-->
+     <h3>
+
+    <form>
+        <li>Architeture, Construction & Surveying</li>
+        <li>Business, Management & Accounting</li>
+        <li>Engineering</li>
+        <li>Digital marketingh</li>
+        <li>Enegy industry</li>
+        <li>pharmacy</li>
+    </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
